--- a/notebooks/resample2.ipynb
+++ b/notebooks/resample2.ipynb
@@ -6,14 +6,9 @@
    "source": [
     "## Resample rebooted: working with projections -- output to h5\n",
     "\n",
-    "Since windows has a problem using pyresample and gdal together, let's start over and use hdf5\n",
-    "for our output format.\n",
-    "\n",
-    "We have been using [fast_hist](https://github.com/a301-teaching/a301_code/blob/f8c2e8cc8dce36c9852ca99ccfe19250d1405b50/a301lib/geolocate.py#L124)\n",
-    "and [fast_avg](https://github.com/a301-teaching/a301_code/blob/f8c2e8cc8dce36c9852ca99ccfe19250d1405b50/a301lib/geolocate.py#L283) to map our MODIS\n",
-    "level 1b pixels to a uniform lat/lon grid for plotting.  There is one big problem with this approach:\n",
-    "the actual ground spacing of a uniform longitude grid changes drastically from the equator to the poles, because\n",
-    "longitude lines converge.   A better approach is to do the following:\n",
+    "In resample.ipynb we output the image in geotiff format using the gdal library.  This is fine\n",
+    "for working with gis software, but the data format is limited compared to the flexibility\n",
+    "of hdf5.  This notebook adds hdf5 output to the geotiff image created by gdal.\n",
     "\n",
     "1) pick a map projection\n",
     "\n",
@@ -24,9 +19,6 @@
     "4) save it as a h5 file, which maintains all the information about the projection we used\n",
     "\n",
     "5) save it as geotiff file, which can be read by gis software\n",
-    "\n",
-    "Luckily, everyone (basemap, gdal, rasterio etc.) uses the same underlying map projection code called [proj4](https://trac.osgeo.org/proj/wiki/GenParms).  In python you can access proj4 with the [pyproj](http://jswhit.github.io/pyproj/) module.   That means there is general agreement on the names of the various\n",
-    "projections etc., although there are differences in detail among the various packages.\n",
     "\n"
    ]
   },
@@ -116,8 +108,8 @@
     "1. In order to get the correct bounding box, we need to take the 4 corner lon,lat values and\n",
     "   and transform them to x,y values for this projection\n",
     "\n",
-    "2. Once we've done that, we can get the minimum x and y, which are the projected coordinates\n",
-    "   of the lower left corner of the viewing box, and the maximum x and y, which are the projected coordinates of the\n",
+    "2. Once we've done that, we can get the minimum x and y, which become the projected coordinates\n",
+    "   of the lower left corner of the viewing box, and the maximum x and y, which become the projected coordinates of the\n",
     "   upper right corner of the viewing box.\n",
     "\n",
     "3. Finally, we inverse transform the corners back to lon,lat\n"
