--- a/notebooks/resample.ipynb
+++ b/notebooks/resample.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "## working with projections\n",
     "\n",
-    "We have been using [fast_hist](https://github.com/phaustin/e582/blob/f8c2e8cc8dce36c9852ca99ccfe19250d1405b50/a301lib/geolocate.py#L124)\n",
-    "and [fast_avg](https://github.com/phaustin/e582/blob/f8c2e8cc8dce36c9852ca99ccfe19250d1405b50/e582lib/geolocate.py#L283) to map our MODIS\n",
+    "We have been using [fast_hist](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#fast_hist)\n",
+    "and [fast_avg](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#fast_avg) to map our MODIS\n",
     "level 1b pixels to a uniform lat/lon grid for plotting.  There is one big problem with this approach:\n",
     "the actual ground spacing of a uniform longitude grid changes drastically from the equator to the poles, because\n",
     "longitude lines converge.   A better approach is to do the following:\n",
@@ -92,9 +92,9 @@
    "source": [
     "### Next use a new function to get the corner points and the center lat and lon from MODIS metadata\n",
     "\n",
-    "The function is [parseMeta](https://github.com/phaustin/e582/blob/b3ea180566d2fd3acd5ea3a246d6c0eb6ae14a41/e582utils/modismeta_read.py#L106) and you\n",
+    "The function is [parseMeta](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582utils/modismeta_read.html#parseMeta) and you\n",
     "can treat it as a black box unless you're interested in how regular expressions work in python. It does\n",
-    "the same thing that [find_corners](https://github.com/phaustin/e582/blob/b3ea180566d2fd3acd5ea3a246d6c0eb6ae14a41/e582lib/geolocate.py#L16) does, but\n",
+    "the same thing that [find_corners](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#find_corners) does, but\n",
     "skips the calculation, since NASA has already computed everything we need more accurately."
    ]
   },
