--- a/notebooks/satellite_IV.ipynb
+++ b/notebooks/satellite_IV.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "In the satellite_III notebook we histogrammed into lat/lon bins and averaged the chan31 radiances in each bin to get a regular grid that could be mapped.  Unfortunately, the plain python routine python routine for binning was too slow to do the whole scene in less than 5 minutes or so.   In this notebook we:\n",
     "\n",
-    "1. move the satellite_III routines [slow_hist](https://github.com/a301-teaching/a301_code/blob/c779af057e49f909df6e55ade93fc108b8080cd1/a301lib/geolocate.py#L317) and [slow_avg](https://github.com/a301-teaching/a301_code/blob/c779af057e49f909df6e55ade93fc108b8080cd1/a301lib/geolocate.py#L276)\n",
-    "to the a301lib.geolocate library and replace them with [fast_hist](https://github.com/a301-teaching/a301_code/blob/c779af057e49f909df6e55ade93fc108b8080cd1/a301lib/geolocate.py#L83) which uses numpy vector operations np.searchsorted and np.bincount, and [fast_avg](https://github.com/a301-teaching/a301_code/blob/c779af057e49f909df6e55ade93fc108b8080cd1/a301lib/geolocate.py#L201) which uses [numba](http://numba.pydata.org/)\n",
+    "1. move the satellite_III routines [slow_hist](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#slow_hist) and [slow_avg](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#slow_avg)\n",
+    "to the a301lib.geolocate library and replace them with [fast_hist](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#fast_hist) which uses numpy vector operations np.searchsorted and np.bincount, and [fast_avg](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#fast_hist) which uses [numba](http://numba.pydata.org/)\n",
     "\n",
     "2. with those functions we can regrid the entire image and plot it using the python [basemap](http://matplotlib.org/basemap/#) module\n",
     "   \n",
