add python files

--- a/notebooks/resample2.ipynb
+++ b/notebooks/resample2.ipynb
@@ -80,9 +80,9 @@
    "source": [
     "### Next use a new function to get the corner points and the center lat and lon from MODIS metadata\n",
     "\n",
-    "The function is [parseMeta](https://github.com/a301-teaching/a301_code/blob/b3ea180566d2fd3acd5ea3a246d6c0eb6ae14a41/a301utils/modismeta_read.py#L106) and you\n",
+    "The function is [parseMeta](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#parseMeta) and you\n",
     "can treat it as a black box unless you're interested in how regular expressions work in python. It does\n",
-    "the same thing that [find_corners](https://github.com/a301-teaching/a301_code/blob/b3ea180566d2fd3acd5ea3a246d6c0eb6ae14a41/a301lib/geolocate.py#L16) does, but\n",
+    "the same thing that [find_corners](https://clouds.eos.ubc.ca/~phil/courses/eosc582/_modules/e582lib/geolocate.html#find_corners) does, but\n",
     "skips the calculation, since NASA has already computed everything we need more accurately."
    ]
   },
