fix solution import

--- a/notebooks/satellite_IV.ipynb
+++ b/notebooks/satellite_IV.ipynb
@@ -385,6 +385,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100, 100, 100, 100, 100],\n",
+       "       [101, 101, 101, 101, 101],\n",
+       "       [102, 102, 102, 102, 102],\n",
+       "       [104, 104, 104, 104, 104]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "lon,lat=np.meshgrid([1,2,3,4,5],[100,101,102,104])\n",
+    "lon\n",
+    "lat"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": false,
