--- a/notebooks/satellite_zoom.ipynb
+++ b/notebooks/satellite_zoom.ipynb
@@ -3767,6 +3767,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -3782,7 +3783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
