--- a/notebooks/find_bins.ipynb
+++ b/notebooks/find_bins.ipynb
@@ -10,16 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here is my verison of the perl program at  \n",
-    "https://oceancolor.gsfc.nasa.gov/docs/format/l3bins/ that calculates\n",
-    "the relationship between latitudes and logitudes and tiles on the NASA sinusoidal grid.  See\n",
-    "http://scipy-lectures.github.io/intro/language/oop.html for a quick intro into how classes work in python"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -125,7 +115,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is my python translation  of the perl script called (bin_calc.py](https://github.com/phaustin/e582/blob/master/utilities/bin_calc.py)  that we'll use to map lon/lat to bin number"
+    "Here is my python translation  of the perl script at https://oceancolor.gsfc.nasa.gov/docs/format/l3bins/ that calculates the relationship between latitudes and logitudes and bins on the NASA sinusoidal grid.  \n",
+    "\n",
+    "Source is at [bin_calc.py](https://github.com/phaustin/e582/blob/master/e582utils/bin_calc.py) \n",
+    "\n",
+    "See\n",
+    "http://scipy-lectures.github.io/intro/language/oop.html for a quick intro into how classes work in python\n",
+    "\n"
    ]
   },
   {
