--- a/notebooks/find_bins.ipynb
+++ b/notebooks/find_bins.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Level 3 binned data: integerized sinusoidal tiling\n",
+    "### Level 3 binned data: integerized sinusoidal binning\n",
     "\n",
-    "Level 3 data is binned in 4 km x 4 km tiles arranged in 4320 latitude rows"
+    "The Level 3 data distributed by the [NASA Ocean Biology Processing Group](https://oceancolor.gsfc.nasa.gov/about)\n",
+    "is binned in 4 km x 4 km tiles arranged in 4320 latitude rows\n",
+    "\n",
+    "For more information see https://oceancolor.gsfc.nasa.gov/docs/format/Ocean_Level-3_Binned_Data_Products.pdf\n",
+    "and https://oceancolor.gsfc.nasa.gov/docs/format/l3bins/"
    ]
   },
   {
