--- a/notebooks/warp_image_new.ipynb
+++ b/notebooks/warp_image_new.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "import numpy as np\n",
     "import warnings\n",
-    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import pyplot as  \n",
     "from mpl_toolkits.basemap import Basemap\n",
     "from matplotlib.colors import Normalize\n",
     "import seaborn as sns\n",
@@ -68,7 +68,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Do the transformation using rasterio"
    ]
@@ -87,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -109,7 +114,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 2-- create a fake image with seattle and vancouver as red and green points and the corners marked with black squares"
    ]
@@ -118,7 +126,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -141,7 +151,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 3: plot the small image with basemap"
    ]
@@ -209,7 +222,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -246,7 +261,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 5: plot the new image using basemap"
    ]
@@ -301,25 +319,51 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Repeat using pyresample"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 1: setup up the crs and corners for the small and large images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 6378137.0,\n",
+       " 'b': 6356752.314245179,\n",
+       " 'lat_0': 49.2606,\n",
+       " 'lon_0': -123.246,\n",
+       " 'proj': 'laea',\n",
+       " 'units': 'm',\n",
+       " 'x_0': 1076574.3344028129,\n",
+       " 'y_0': 1500964.7581105533}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyresample import image, geometry\n",
     "small_crs=bmap_small.projparams\n",
@@ -327,12 +371,16 @@
     "small_height,small_width = van_image.shape\n",
     "large_crs=bmap_large.projparams\n",
     "large_extent=[bmap_large.llcrnrx,bmap_large.llcrnry,bmap_large.urcrnrx,bmap_large.urcrnry]\n",
-    "large_height,large_width = 800,600"
+    "large_height,large_width = 800,600\n",
+    "large_crs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 2: reproject utins pyresample\n",
     "\n",
@@ -343,7 +391,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -364,7 +414,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### step 3: plot using basemap"
    ]
@@ -373,7 +426,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -411,7 +466,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
