--- a/notebooks/satellite_temps.ipynb
+++ b/notebooks/satellite_temps.ipynb
@@ -244,7 +244,7 @@
     "    cax,kw = matplotlib.colorbar.make_axes(ax,location='bottom',pad=0.05,shrink=0.7)\n",
     "    out=fig.colorbar(col,cax=cax,extend='both',**kw)\n",
     "    out.set_label('Chan 31 radiance (W/m^2/micron/sr)',size=20)\n",
-    "    ax.set_title('Chan 31 radiance vancouver',size=25)\n",
+    "    ax.set_title('Chan 31 radiance',size=25)\n",
     "    print(kw)"
    ]
   },
@@ -321,7 +321,7 @@
     "    cax,kw = matplotlib.colorbar.make_axes(ax,location='bottom',pad=0.05,shrink=0.7)\n",
     "    out=fig.colorbar(col,cax=cax,extend='both',**kw)\n",
     "    out.set_label('Brightness temperature (deg C)',size=20)\n",
-    "    ax.set_title('Chan 31 brightness Vancouver',size=25)\n",
+    "    ax.set_title('Chan 31 brightness temp',size=25)\n",
     "    print(kw)"
    ]
   },
