--- a/notebooks/plot_tiff.ipynb
+++ b/notebooks/plot_tiff.ipynb
@@ -439,7 +439,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -462,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
