--- a/notebooks/web_download.ipynb
+++ b/notebooks/web_download.ipynb
@@ -59,7 +59,59 @@
       "writing to: T2002003.L3m_DAY_PAR_par_4km.nc\n",
       "writing temporary file T2002003.L3m_DAY_PAR_par_4km.nc_tmp\n",
       "downloaded T2002003.L3m_DAY_PAR_par_4km.nc\n",
-      "size = 29658400\n"
+      "size = 29658400\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file A2002004.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "requests.get() returned \"Not found\" with filename A2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file T2002004.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded T2002004.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 29622574\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file A2003001.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded A2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 44783336\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file T2003001.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded T2003001.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 29461681\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file A2003002.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded A2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 44936684\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file T2003002.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded T2003002.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 29478149\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file A2003003.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded A2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 44399292\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file T2003003.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded T2003003.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 29484289\n",
+      "--------------------\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/A2003004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: A2003004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file A2003004.L3m_DAY_PAR_par_4km.nc_tmp\n",
+      "downloaded A2003004.L3m_DAY_PAR_par_4km.nc\n",
+      "size = 44853249\n",
+      "trying https://oceandata.sci.gsfc.nasa.gov/cgi/getfile/T2003004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing to: T2003004.L3m_DAY_PAR_par_4km.nc\n",
+      "writing temporary file T2003004.L3m_DAY_PAR_par_4km.nc_tmp\n"
      ]
     }
    ],
@@ -81,7 +133,6 @@
     "                time.sleep(3)\n",
     "            except NoDataException as e:\n",
     "                print(e)\n",
-    "                pass\n",
     "        print('-'*20)"
    ]
   },
